- Added an easier to use wxMenu::AppendSubMenu().
- wxString <-> wxColour conversions in wxColour class (Francesco Montorsi).
- Fixed bug with ignoring blank lines in multiline wxGrid cell labels.
- Added wxTextAttr::Merge() (Marcin Simonides).
- Added wxTB_NO_TOOLTIPS style (Igor Korot).
- Added wxGenericDirCtrl::CollapsePath() (Christian Buhtz).
- Fixed 64-bit issue in wxNotebook causing segfaults on Tru64 Unix.
- Made it possible to associate context help to a region of a window.
- Added support for tabs in wxRichTextCtrl (Ashish More).
- Fixed problem with zoom setting in print preview.
- Moved wxRichTextCtrl from the advanced library to its own.

wxMSW:

- Fixed crash with ownerdrawn menu items accelerators (Perry Miller).
- wxFileDialog respects absence of wxCHANGE_DIR flag under NT (Brad Anderson).
- Switching page of a hidden notebook doesn't lose focus (Jamie Gadd).
- Removed wxImageList *GetImageList(int) const.
- Fixed MDI context menu problem.
- Removed __WIN95__ define
- Create msw/rcdefs.h in setup.h's directory, which can be included by
  resource files. It containts platform/compiler specific defines (such as
  target cpu) which can be used in #ifs in .rc files.
- Add support for Win64 manifests and VC++ 8 automatic manifests (see the
  wxMSW faq for details).
- New TARGET_CPU=amd64 (or 'ia64') option for the makefile.vc files which
  puts 64-bit builds in their own directory and adds /machine:amd64 or ia64
  to the link command.
- wxStatusBar::GetFieldRect now returns correct values under XP.
- wxStatusBar no longer corrupts surrounding windows on resize.
- Enable wxListCtrl in report mode to be able to use images in other
  columns, if ComCtl32 >= 470.
- Fixed problem where using SetValue and wxTE_RICH2 would cause control to
  show.
- Numpad special keys are now distinguished from normal keys.
- Fixed GDI leak in wxStaticBitmap when setting images after
  initial construction.
- Menu codes now stripped before measuring control labels.